--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/router": "4.4.3",
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
+    "morgan": "^1.9.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
