--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node ./server/server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,10 +24,12 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.0.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
