--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "4.4.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "consolidate": "^0.15.0",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
