Changed all files to typescript to import stroke.ts class. Run: npm install -g ts-node and npm install -g typescript if you havent

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node ./server/server.js",
+    "start": "ts-node ./server/server.ts",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
