--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/router": "4.4.3",
+    "angularfire2": "^5.0.0-rc.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "consolidate": "^0.15.0",
     "core-js": "^2.4.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "firebase": "^4.10.1",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
